# alma-labops

./: .gitignore  README.md  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/ai/: client.py  copilot.py  inventory_assistant.py  package_vision.py  procurement_assistant.py  rag_assistant.py
backend/app/api/v1/: router.py
backend/app/api/v1/audit_logs/: router.py
backend/app/api/v1/auth/: router.py
backend/app/api/v1/copilot/: router.py
backend/app/api/v1/incoming_packages/: router.py
backend/app/api/v1/inventory/: router.py
backend/app/api/v1/knowledge_base/: router.py
backend/app/api/v1/purchase_requests/: router.py
backend/app/api/v1/tasks/: router.py
backend/app/db/: supabase.py
backend/app/middleware/: rbac.py
backend/app/models/: audit.py  auth.py  inventory.py  package.py  procurement.py  task.py
backend/app/services/audit_logs/: service.py
backend/app/services/copilot/: service.py
backend/app/services/incoming_packages/: service.py
backend/app/services/inventory/: service.py
backend/app/services/knowledge_base/: service.py
backend/app/services/purchase_requests/: service.py
backend/app/services/tasks/: service.py
backend/scripts/: run_basic_ai_evals.py  seed_inventory.py  seed_knowledge_base.py  seed_packages.py  seed_procurement.py  seed_tasks.py  seed_users.py
docs/: ARCHITECTURE_OVERVIEW.md  KEY_DESIGN_DECISIONS.md  KNOWN_LIMITATIONS.md  SETUP_INSTRUCTIONS.md  implementation_roadmap_alma_labops.md  master_spec_alma_labops.md  (+1 more)
frontend/: package.json  (+1 more)
(+75 files in other folders)
